--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/libxmljs"]
 	path = lib/libxmljs
-	url = git://github.com/ehaas/libxmljs.git
+	url = git://github.com/fictivekin/libxmljs.git
