--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "url": "https://github.com/fictivekin/webshell.git"
   },
   "engines": { "node": ">=0.4.0" },
-  "dependencies": { "hashlib": ">=1.0.0" },
+  "dependencies": { "hashlib": ">=1.0.0", "qs": "" },
   "bin": { "webshell": "./shell.js" }
 }
